begin revision of module A

--- a/tex/modules/4-A/index.tex
+++ b/tex/modules/4-A/index.tex
@@ -2,10 +2,10 @@
 
 \input{modules/4-A/standards.tex}
 \input{modules/4-A/readiness/outcomes.tex}
-\input{modules/4-A/readiness/resources.tex}
 
 \input{modules/4-A/sections/1.tex}
 \input{modules/4-A/sections/2.tex}
 \input{modules/4-A/sections/3.tex}
+\input{modules/4-A/sections/4.tex}
 
 \end{module}
