--- a/tex/modules/4-A/readiness/outcomes.tex
+++ b/tex/modules/4-A/readiness/outcomes.tex
@@ -1,6 +1,7 @@
 \begin{readinessAssuranceOutcomes}
-\item Solve a system of linear equations (including finding a basis of the solution space if it is homogeneous) by interpreting as an augmented matrix and row reducing \listOfStandards{E1, E2, E3, E4}.
-\item State the definition of a spanning set, and determine if a set of vectors spans a vector space or subspace \listOfStandards{V3}.
-\item State the definition of linear independence, and determine if a set of vectors is linearly dependent or independent \listOfStandards{S1}.
-\item State the definition of a basis, and determine if a set of vectors is a basis \listOfStandards{S2}.
+\item State the definition of a spanning set, and determine if a set of Euclidean vectors spans \(\IR^n\) \listOfStandards{V4}.
+\item State the definition of linear independence, and determine if a set of Euclidean vectors is linearly dependent or independent \listOfStandards{S1}.
+\item State the definition of a basis, and determine if a set of Euclidean vectors is a basis \listOfStandards{S2,S3}.
+\item Find a basis of the solution space to a homogeneous system
+of linear equations \listOfStandards{S6}.
 \end{readinessAssuranceOutcomes}
