--- a/tex/modules/4-A/sections/2.tex
+++ b/tex/modules/4-A/sections/2.tex
@@ -1,108 +1,208 @@
-
-
-
 \begin{applicationActivities}
 
-\begin{definition}
-Let $T: V \rightarrow W$ be a linear transformation.
-$T$ is called \term{injective} or \term{one-to-one} if $T$ does not map two distinct values to the same place.  More precisely, $T$ is injective if $T(\vec{v}) \neq T(\vec{w})$ whenever $\vec{v} \neq \vec{w}$.
-%$T$ is called \term{surjective} or \term{onto} if every element of $W$ is mapped to by an element of $V$.  More precisely, for every $\vec{w} \in W$, there is some $v \in V$ with $T(\vec{v})=\vec{w}$.
-\end{definition}
+\begin{remark}
+Recall that a linear map \(T:V\rightarrow W\)
+satisfies
+\begin{enumerate}
+\item \(T(\vec{v}+\vec{w}) = T(\vec{v})+T(\vec{w})\)
+      for any \(\vec{v},\vec{w} \in V\).
+\item \(T(c\vec{v}) = cT(\vec{v})\)
+      for any \(c \in \IR,\vec{v} \in V\).
+\end{enumerate}
+In other words, a map is linear when vecor space operations
+can be applied before or after the transformation without affecting the result.
+\end{remark}
 
 \begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right) = \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}.$$
-The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$. \\
-Is $T$ injective?
+Suppose \(T: \IR^3 \rightarrow \IR^2\) is a linear map, and you know
+\(
+  T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right)
+=
+  \begin{bmatrix} 2 \\ 1 \end{bmatrix}
+\)
+and
+\(
+  T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right)
+=
+  \begin{bmatrix} -3 \\ 2 \end{bmatrix}
+\).
+Compute \(T\left(\begin{bmatrix} 3 \\ 0 \\ 0 \end{bmatrix}\right)\).
+\begin{multicols}{2}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} 6 \\ 3\end{bmatrix}\)
+\item \(\begin{bmatrix} -9 \\ 6 \end{bmatrix}\)
+\item \(\begin{bmatrix} -4 \\ -2 \end{bmatrix}\)
+\item \(\begin{bmatrix} 6 \\ -4 \end{bmatrix}\)
+\end{enumerate}
+\end{multicols}
+\end{activity}
+
+\begin{activity}{3}
+Suppose \(T: \IR^3 \rightarrow \IR^2\) is a linear map, and you know
+\(
+  T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right)
+=
+  \begin{bmatrix} 2 \\ 1 \end{bmatrix}
+\)
+and
+\(
+  T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right)
+=
+  \begin{bmatrix} -3 \\ 2 \end{bmatrix}
+\).
+Compute \(T\left(\begin{bmatrix} 1 \\ 0 \\ 1 \end{bmatrix}\right)\).
+\begin{multicols}{2}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} 2 \\ 1\end{bmatrix}\)
+\item \(\begin{bmatrix} 3 \\ -1 \end{bmatrix}\)
+\item \(\begin{bmatrix} -1 \\ 3 \end{bmatrix}\)
+\item \(\begin{bmatrix} 5 \\ -8 \end{bmatrix}\)
+\end{enumerate}
+\end{multicols}
+\end{activity}
+
+\begin{activity}{2}
+Suppose \(T: \IR^3 \rightarrow \IR^2\) is a linear map, and you know
+\(
+  T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right)
+=
+  \begin{bmatrix} 2 \\ 1 \end{bmatrix}
+\)
+and
+\(
+  T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right)
+=
+  \begin{bmatrix} -3 \\ 2 \end{bmatrix}
+\).
+Compute \(T\left(\begin{bmatrix} -2 \\ 0 \\ -3 \end{bmatrix}\right)\).
+\begin{multicols}{2}
+\begin{enumerate}[(a)]
+\item \(\begin{bmatrix} 2 \\ 1\end{bmatrix}\)
+\item \(\begin{bmatrix} 3 \\ -1 \end{bmatrix}\)
+\item \(\begin{bmatrix} -1 \\ 3 \end{bmatrix}\)
+\item \(\begin{bmatrix} 5 \\ -8 \end{bmatrix}\)
+\end{enumerate}
+\end{multicols}
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x \\ y \end{bmatrix}.$$  The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.\\
-Is $T$ injective?
+Suppose \(T: \IR^3 \rightarrow \IR^2\) is a linear map, and you know
+\(
+  T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right)
+=
+  \begin{bmatrix} 2 \\ 1 \end{bmatrix}
+\)
+and
+\(
+  T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right)
+=
+  \begin{bmatrix} -3 \\ 2 \end{bmatrix}
+\).
+Do you have enough information to compute
+\(T(\vec{v})\) for \textit{any} \(\vec v\in\IR^3\)?
+\begin{enumerate}[(a)]
+\item Yes.
+\item No, exactly one more piece of information is needed.
+\item No, an infinite amount of information would be necessary to compute
+      the transformation of infinitely-many vectors.
+\end{enumerate}
 \end{activity}
 
-\begin{definition}
-Let $T: V \rightarrow W$ be a linear transformation.
-$T$ is called \term{surjective} or \term{onto} if every element of $W$ is mapped to by an element of $V$.  More precisely, for every $\vec{w} \in W$, there is some $\vec{v} \in V$ with $T(\vec{v})=\vec{w}$.
-\end{definition}
+\begin{fact}
+Consider any basis \(\{\vec b_1,\dots,\vec b_n\}\) for $V$.  Since every
+vector \(\vec v\) can be written \textit{uniquely} as a linear combination of
+basis vectors, \(x_1\vec b_1+\dots+ x_n\vec b_n\), we conclude that
 
-\begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right) = \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}.$$
-The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$. \\
-Is $T$ surjective?
-\end{activity}
-
-\begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x \\ y \end{bmatrix}.$$  The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.\\
-Is $T$ surjective?
-\end{activity}
-
-
-\begin{definition}
-Let $T: V \rightarrow W$ be a linear transformation.  The \term{kernel} of $T$
-is an important subspace of \(V\) defined by
 \[
-\ker T = \left\{ \vec{v} \in V\ \big|\ T(\vec{v})=\vec{0}\right\}
-\]
+  T(\vec v)=T(x_1\vec b_1+\dots+ x_n\vec b_n)=
+  x_1T(\vec b_1)+\dots+x_nT(\vec b_n)
+.\]
+
+Therefore any linear transformation \(T:V \rightarrow W\) can be defined
+by just describing the values of \(T(\vec b_i)\).
+
+Put another way, the basis vectors \term{determine} the transformation \(T\).
+\end{fact}
+
+\begin{definition}
+Since linear transformation \(T:\IR^n\to\IR^m\) is determined by
+the standard basis \(\{\vec e_1,\dots,\vec e_n\}\), it's convenient to
+store this information in the \(m\times n\) \term{standard matrix}
+\([T(\vec e_1) \,\cdots\, T(\vec e_n)]\).
 \end{definition}
 
-\begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by the standard matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$.  Find the kernel of $T$.
+
+\begin{example}
+Let \(T: \IR^3 \rightarrow \IR^2\) be the linear map determined by
+the following values for \(T\) applied to the standard basis of \(\IR^3\).
+
+\(
+  T\left(\vec e_1 \right)
+=
+  T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right)
+=
+  \begin{bmatrix} 3 \\ 2\end{bmatrix}
+\)
+\hfill
+\(
+  T\left(\vec e_2 \right)
+=
+  T\left(\begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix} \right)
+=
+  \begin{bmatrix} -1 \\ 4\end{bmatrix}
+\)
+\hfill
+\(
+  T\left(\vec e_3 \right)
+=
+  T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right)
+=
+  \begin{bmatrix} 5 \\ 0\end{bmatrix}
+\)
+
+Then the standard matrix corresponding to \(T\) is
+\[
+  \begin{bmatrix}T(\vec e_1) & T(\vec e_2) & T(\vec e_3)\end{bmatrix}
+=
+  \begin{bmatrix}3 & -1 & 5 \\ 2 & 4 & 0 \end{bmatrix}
+.\]
+\end{example}
+
+\begin{activity}{5}TODO
+  Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by
+$$T\left(\begin{bmatrix} x\\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x+3z \\ 2x-y-4z \end{bmatrix}$$
+Write the matrix corresponding to this linear transformation with respect to the standard basis.
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the standard matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.  Find the kernel of $T$.
+  Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the standard matrix $$\begin{bmatrix} 3  & -2 & -1  \\ 4 & 5 & 2 \end{bmatrix}.$$
+
+Compute $T\left(\begin{bmatrix} x\\ y \\ z \end{bmatrix} \right) $.
 \end{activity}
 
-
+% \begin{fact}
+%   $T: \IR^n \rightarrow \IR^m$ is given by the matrix
+%   \([\vec v_1 \,\cdots\, \vec v_n]\) exactly when
+%   \(T\left(
+%     \begin{bmatrix}
+%       x_1 \\ \vdots \\ x_n
+%     \end{bmatrix}
+%   \right)
+%     =
+%   x_1\vec v_1 + \dots + x_n\vec v_n\).
+% \end{fact}
 
 \begin{activity}{10}
-Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the standard matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$.
+Let $D: \P^3 \rightarrow \P^2$ be the derivative map \(D(f(x))=f'(x)\).
+(Earlier we showed this is a linear transformation.)
 \begin{subactivity}
-Write a system of equations whose solution set is the kernel.
+Write down an equivalent linear transformation $T: \IR^4 \rightarrow \IR^3$
+by converting \(\{1,x,x^2,x^3\}\) and \(\{D(1),D(x),D(x^2),D(x^3)\}\) into
+appropriate vectors in \(\IR^4\) and \(\IR^3\).
 \end{subactivity}
 \begin{subactivity}
-Use $\RREF(A)$ to solve the system of equations and find the kernel of \(T\).
-\end{subactivity}
-\begin{subactivity}
-Find a basis for the kernel of $T$.
-\end{subactivity}
-\end{activity}
-
-
-\begin{definition}
-Let $T: V \rightarrow W$ be a linear transformation.
-The \term{image} of $T$ is an important subspace of \(W\) defined by
-\[
-\Im T = \left\{ \vec{w} \in W\ \big|\ \text{there is some }v\in V \text{ with } T(\vec{v})=\vec{w}\right\}
-\]
-\end{definition}
-
-\begin{activity}{5}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by the standard matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$.  Find the image of $T$.
-\end{activity}
-
-\begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the standard matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.  Find the image of $T$.
-\end{activity}
-
-
-\begin{activity}{10}
-Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the standard matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$.
-\begin{subactivity}
-Find a convenient set of vectors \(S\subseteq\IR^2\) such that \(\vspan S=\Im T\).
-\end{subactivity}
-\begin{subactivity}
-Find a convenient basis for the image of $T$.
+Write the standard matrix corresponding to $T$.
 \end{subactivity}
 \end{activity}
-
-\begin{observation}
-Let $T: V \rightarrow W$ be a linear transformation with corresponding matrix $A$.
-
-\begin{itemize}
-\item If $A$ is a matrix corresponding to $T$, the kernel is the solution set of the homogeneous system with coefficients given by $A$.
-\item If $A$ is a matrix corresponding to $T$, the image is the span of the columns of $A$.
-\end{itemize}
-\end{observation}
 
 \end{applicationActivities}
