--- a/tex/modules/4-A/sections/3.tex
+++ b/tex/modules/4-A/sections/3.tex
@@ -1,125 +1,108 @@
+
+
+
 \begin{applicationActivities}
 
-\begin{observation}
-Let $T: V \rightarrow W$.  We have previously defined the following
-terms.
-\begin{itemize}
-\item  $T$ is called \term{injective} or \term{one-to-one} if $T$ does not map two distinct values to the same place.
-\item $T$ is called \term{surjective} or \term{onto} if every element of $W$ is mapped to by some element of $V$.
-\item The \term{kernel} of $T$ is the set of all things that are mapped to $\vec{0}$.  It is a subspace of $V$.
-\item The \term{image} of $T$ is the set of all things in $W$ that are mapped to by something in $V$.  It is a subspace of $W$.
-\end{itemize}
-\end{observation}
-
-\begin{activity}{5}
-Let $T: V \rightarrow W$ be a linear transformation where
-$\ker T = \{ \vec{0} \}$. Can you answer either of the following questions
-about \(T\)?
-\begin{enumerate}[(a)]
-\item Is $T$ injective?
-\item Is $T$ surjective?
-\end{enumerate}
-(Hint: If $T(\vec{v})=T(\vec{w})$, then what is $T(\vec{v}-\vec{w})$?)
-\end{activity}
-
-\begin{fact}
-A linear transformation $T$ is injective \textbf{if and only if} $\ker T = \{\vec{0}\}$. Put another way, an injective linear transformation may be
-recognized by its \term{trivial} kernel.
-\end{fact}
-
-\begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^3$ be a linear transformation where
-$\Im T = \vspan \left\{ \begin{bmatrix} 1 \\ 0 \\ 3 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ -1 \end{bmatrix} \right\}$.
-Can you answer either of the following questions about \(T\)?
-\begin{enumerate}[(a)]
-\item Is $T$ injective?
-\item Is $T$ surjective?
-\end{enumerate}
-\end{activity}
-
-\begin{fact}
-A linear transformation $T:V \rightarrow W$ is surjective \textbf{if and only if} $\Im T = W$. Put another way, a surjective linear transformation may be
-recognized by its same codomain and image.
-\end{fact}
-
-\begin{activity}{15}
-Let $T: \IR^n \rightarrow \IR^m$ be a linear map with standard matrix $A$.
-Sort the following claims into two groups of equivalent statements.
-\begin{multicols}{2}
-\begin{enumerate}[(a)]
-\item $T$ is injective
-\item $T$ is surjective
-\item The kernel of \(T\) is trivial.
-\item The columns of $A$ span $\IR^m$
-\item The columns of $A$ are linearly independent
-\item Every column of $\RREF(A)$ has a pivot.
-\item Every row of $\RREF(A)$ has a pivot.
-\item The image of \(T\) equals its codomain.
-\item The system of linear equations given by the augmented matrix $\begin{bmatrix}[c|c]A & \vec{b} \end{bmatrix}$ has a solution for all $\vec{b} \in \IR^m$
-\item The system of linear equations given by the augmented matrix $\begin{bmatrix}[c|c] A & \vec{0} \end{bmatrix}$ has exactly one solution.
-\end{enumerate}
-\end{multicols}
-\begin{instructorNote}
-  This activity may be ran as a card sort.
-\end{instructorNote}
-
-
-\end{activity}
-
 \begin{definition}
-If $T: V \rightarrow W$ is both injective and surjective, it is called \term{bijective}.
+Let $T: V \rightarrow W$ be a linear transformation.
+$T$ is called \term{injective} or \term{one-to-one} if $T$ does not map two distinct values to the same place.  More precisely, $T$ is injective if $T(\vec{v}) \neq T(\vec{w})$ whenever $\vec{v} \neq \vec{w}$.
+%$T$ is called \term{surjective} or \term{onto} if every element of $W$ is mapped to by an element of $V$.  More precisely, for every $\vec{w} \in W$, there is some $v \in V$ with $T(\vec{v})=\vec{w}$.
 \end{definition}
 
 \begin{activity}{5}
-Let $T: \IR^n \rightarrow \IR^m$ be a bijective linear map with
-standard matrix $A$. Label each of the following as true or false.
-\begin{enumerate}[(a)]
-\item The columns of $A$ form a basis for $\IR^m$
-\item $\RREF(A)$ is the identity matrix.
-\item The system of linear equations given by the augmented matrix $\begin{bmatrix}[c|c] A & \vec{b} \end{bmatrix}$ has exactly one solution
-for all \(\vect b \in \IR^m\).
-\end{enumerate}
+Let $T: \IR^2 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right) = \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}.$$
+The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$. \\
+Is $T$ injective?
 \end{activity}
+
+\begin{activity}{5}
+Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x \\ y \end{bmatrix}.$$  The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.\\
+Is $T$ injective?
+\end{activity}
+
+\begin{definition}
+Let $T: V \rightarrow W$ be a linear transformation.
+$T$ is called \term{surjective} or \term{onto} if every element of $W$ is mapped to by an element of $V$.  More precisely, for every $\vec{w} \in W$, there is some $\vec{v} \in V$ with $T(\vec{v})=\vec{w}$.
+\end{definition}
+
+\begin{activity}{5}
+Let $T: \IR^2 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix}x \\ y \end{bmatrix} \right) = \begin{bmatrix} x \\ y \\ 0 \end{bmatrix}.$$
+The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$. \\
+Is $T$ surjective?
+\end{activity}
+
+\begin{activity}{5}
+Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x \\ y \end{bmatrix}.$$  The standard matrix of $T$ is thus $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.\\
+Is $T$ surjective?
+\end{activity}
+
+
+\begin{definition}
+Let $T: V \rightarrow W$ be a linear transformation.  The \term{kernel} of $T$
+is an important subspace of \(V\) defined by
+\[
+\ker T = \left\{ \vec{v} \in V\ \big|\ T(\vec{v})=\vec{0}\right\}
+\]
+\end{definition}
+
+\begin{activity}{5}
+Let $T: \IR^2 \rightarrow \IR^3$ be given by the standard matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$.  Find the kernel of $T$.
+\end{activity}
+
+\begin{activity}{5}
+Let $T: \IR^3 \rightarrow \IR^2$ be given by the standard matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.  Find the kernel of $T$.
+\end{activity}
+
+
 
 \begin{activity}{10}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix} x \\ y \end{bmatrix} \right) = \begin{bmatrix} 2x+3y \\ x-y \\ x+3y\end{bmatrix}.$$  Which of the following must be true?
-\begin{enumerate}[(a)]
-\item $T$ is neither injective nor surjective
-\item $T$ is injective but not surjective
-\item $T$ is surjective but not injective
-\item $T$ is bijective.
-\end{enumerate}
+Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the standard matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$.
+\begin{subactivity}
+Write a system of equations whose solution set is the kernel.
+\end{subactivity}
+\begin{subactivity}
+Use $\RREF(A)$ to solve the system of equations and find the kernel of \(T\).
+\end{subactivity}
+\begin{subactivity}
+Find a basis for the kernel of $T$.
+\end{subactivity}
+\end{activity}
+
+
+\begin{definition}
+Let $T: V \rightarrow W$ be a linear transformation.
+The \term{image} of $T$ is an important subspace of \(W\) defined by
+\[
+\Im T = \left\{ \vec{w} \in W\ \big|\ \text{there is some }v\in V \text{ with } T(\vec{v})=\vec{w}\right\}
+\]
+\end{definition}
+
+\begin{activity}{5}
+Let $T: \IR^2 \rightarrow \IR^3$ be given by the standard matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$.  Find the image of $T$.
 \end{activity}
 
 \begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y  \\ z \end{bmatrix} \right) = \begin{bmatrix} 2x+y-z \\ 4x+y+z\end{bmatrix}.$$  Which of the following must be true?
-\begin{enumerate}[(a)]
-\item $T$ is neither injective nor surjective
-\item $T$ is injective but not surjective
-\item $T$ is surjective but not injective
-\item $T$ is bijective.
-\end{enumerate}
+Let $T: \IR^3 \rightarrow \IR^2$ be given by the standard matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.  Find the image of $T$.
 \end{activity}
 
-\begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix} x \\ y  \\ z \end{bmatrix} \right) = \begin{bmatrix} 2x+y-z \\ 4x+y+z \\ 6x+2y+z\end{bmatrix}.$$ Which of the following must be true?
-\begin{enumerate}[(a)]
-\item $T$ is neither injective nor surjective
-\item $T$ is injective but not surjective
-\item $T$ is surjective but not injective
-\item $T$ is bijective.
-\end{enumerate}
+
+\begin{activity}{10}
+Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the standard matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$.
+\begin{subactivity}
+Find a convenient set of vectors \(S\subseteq\IR^2\) such that \(\vspan S=\Im T\).
+\end{subactivity}
+\begin{subactivity}
+Find a convenient basis for the image of $T$.
+\end{subactivity}
 \end{activity}
 
-\begin{activity}{5}
-Let $T: \IR^3 \rightarrow \IR^3$ be given by $$T\left(\begin{bmatrix} x \\ y  \\ z \end{bmatrix} \right) = \begin{bmatrix} 2x+y-z \\ 4x+y+z \\ 6x+2y\end{bmatrix}.$$   Which of the following must be true?
-\begin{enumerate}[(a)]
-\item $T$ is neither injective nor surjective
-\item $T$ is injective but not surjective
-\item $T$ is surjective but not injective
-\item $T$ is bijective.
-\end{enumerate}
-\end{activity}
+\begin{observation}
+Let $T: V \rightarrow W$ be a linear transformation with corresponding matrix $A$.
 
+\begin{itemize}
+\item If $A$ is a matrix corresponding to $T$, the kernel is the solution set of the homogeneous system with coefficients given by $A$.
+\item If $A$ is a matrix corresponding to $T$, the image is the span of the columns of $A$.
+\end{itemize}
+\end{observation}
 
 \end{applicationActivities}
