Update RAT for module E

--- a/tex/modules/1-E/readiness/outcomes.tex
+++ b/tex/modules/1-E/readiness/outcomes.tex
@@ -3,4 +3,5 @@
       will have zero, one, or infinitely-many solutions by graphing.
 \item Find the unique solution to a two-variable system of linear equations
       by back-substitution.
+\item Describe sets using set-builder notation, and check if an element is a member of a set described by set-builder notation.
 \end{readinessAssuranceOutcomes}
