--- a/tex/modules/1-E/readiness/resources.tex
+++ b/tex/modules/1-E/readiness/resources.tex
@@ -5,4 +5,6 @@
 \item Solving linear systems with substitution (Khan Academy):
       \url{http://bit.ly/1SlMpix}
       % \url{https://www.khanacademy.org/math/algebra/systems-of-linear-equations/solving-systems-of-equations-with-substitution/v/practice-using-substitution-for-systems}
+\item Set builder notation: 
+		\url{https://www.youtube.com/watch?v=xnfUZ-NTsCE}
 \end{readinessAssuranceResources}
