--- a/tex/modules/1-E/readiness/test.tex
+++ b/tex/modules/1-E/readiness/test.tex
@@ -1,17 +1,30 @@
 \begin{readinessAssuranceTest}
-%1  C
-\item Which of these graphs represents the following system of linear equations?
-      \begin{align*}
-      x+2y   &=   4 \\
-      2x-3y  &=  1
-      \end{align*}
 
+
+%1  C
+%\item Which of these graphs represents the following system of linear equations?
+%      \begin{align*}
+%      x+2y   &=   4 \\
+%      2x-3y  &=  1
+%      \end{align*}
+%
+%\begin{multicols}{4}
+%\begin{readinessAssuranceTestChoices}
+%\item \systemWithInfinitelyManySolutions
+%\item \systemWithNoSolutions
+%\item \systemWithOneSolutionA % correct
+%\item \systemWithOneSolutionB
+%\end{readinessAssuranceTestChoices}
+%\end{multicols}
+
+%1 C
+\item Which of the following describe the set of all points on the line \(2x+3y=0\)?
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \systemWithInfinitelyManySolutions
-\item \systemWithNoSolutions
-\item \systemWithOneSolutionA % correct
-\item \systemWithOneSolutionB
+\item \(\displaystyle \left\{ (x,y) \right\}\)
+\item \(\displaystyle \left\{ (2x,3y) \right\}\)
+\item \(\displaystyle \left\{ (x,y) \,\middle|\, 2x+3y=0 \right\}\) %Correct
+\item \(\displaystyle \left\{ (2x,3y) \,\middle|\, 2x+3y=0 \right\}\)
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
@@ -20,7 +33,7 @@
 \item How many solutions are there for the system of linear equations
       represented by the following graph?
     \begin{center}
-      \systemWithOneSolutionB
+      \systemWithOneSolutionB[0.23]
     \end{center}
 
 \begin{multicols}{4}
@@ -33,22 +46,32 @@
 \end{multicols}
 
 %3  D
-\item Which of these graphs represents the following system of linear equations?
-      \begin{align*}
-      3x+3y   &=   6 \\
-      x+y  &=  2
-      \end{align*}
+%\item Which of these graphs represents the following system of linear equations?
+%      \begin{align*}
+%      3x+3y   &=   6 \\
+%      x+y  &=  2
+%      \end{align*}
+%
+%\begin{multicols}{4}
+%\begin{readinessAssuranceTestChoices}
+%\item \systemWithOneSolutionA
+%\item \systemWithOneSolutionB
+%\item \systemWithNoSolutions
+%\item \systemWithInfinitelyManySolutions % correct
+%\end{readinessAssuranceTestChoices}
+%\end{multicols}
 
+%3 D
+\item Which of the following points is an element of the set 
+		\(\displaystyle \left\{ (x,y) \,\middle|\, 3x+4y=12 \right\}\) ?
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \systemWithOneSolutionA
-\item \systemWithOneSolutionB
-\item \systemWithNoSolutions
-\item \systemWithInfinitelyManySolutions % correct
+\item \( (1,1) \)
+\item \( (3,4) \)
+\item \( (4,-3) \)
+\item \( (8,-3) \) %Correct
 \end{readinessAssuranceTestChoices}
 \end{multicols}
-
-
 
 %4  D
 \item How many solutions are there for the system of linear equations
