--- a/tex/modules/1-E/sections/2.tex
+++ b/tex/modules/1-E/sections/2.tex
@@ -1,262 +1,193 @@
 
 
 
+\newcommand{\drawtruss}[1][1]{%
+\begin{center}
+\begin{tikzpicture}[scale=#1]
+\draw (0,0) -- node[left,magenta]{$1$} (1,1.71) -- node[right,magenta]{$3$} (2,0) -- node[above,magenta]{$2$} cycle;
+\draw (2,0) -- node[left,magenta]{$5$} (3,1.71) -- node[above,magenta]{$4$} (1,1.71) -- cycle;
+\draw (3,1.71) -- node[right,magenta]{$7$}  (4,0) -- node[above,magenta]{$6$} (2,0) -- cycle;
+\draw[blue] (0,0) -- (0.25,-0.425) -- (-0.25,-0.425) -- cycle;
+\draw[blue] (4,0) -- (4.25,-0.425) -- (3.75,-0.425) -- cycle;
+\draw[thick,red,->] (2,0) --node[right]{10000 N} (2,-0.75);
+\end{tikzpicture}
+\end{center}
+}
+
+
 \begin{applicationActivities}
 
+\begin{fact}
+  Every augmented matrix \(A\) reduces to a unique reduced row echelon form
+  matrix. This matrix is denoted as \(\RREF(A)\).
+\end{fact}
 
-
-\begin{remark}
-  The only important information in a linear system are its coefficients and
-  constants.
-
-  \begin{multicols}{3}\noindent
-    Original linear system:
-    \begin{alignat*}{2}
-       x_1 + 3x_3 &\,=\,& 3 \\
-      3x_1 - 2x_2 + 4x_3 &\,=\,& 0 \\
-      -x_2 +  x_3 &\,=\,& -2
-    \end{alignat*}
-    Verbose standard form:
-    \begin{alignat*}{4}
-      1x_1 &\,+\,& 0x_2 &\,+\,& 3x_3 &\,=\,& 3 \\
-      3x_1 &\,-\,& 2x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
-      0x_1 &\,-\,& 1x_2 &\,+\,& 1x_3 &\,=\,& -2
-    \end{alignat*}
-    Coefficients/constants:
-    \begin{alignat*}{4}
-       1 &     &  0 &\,\,& 3 &\,|\,& 3 \\
-       3 &\, \,& -2 &\,\,& 4 &\,|\,& 0 \\
-       0 &\, \,& -1 &\,\,& 1 &\,|\,& -2
-    \end{alignat*}
-  \end{multicols}
-\end{remark}
-
-\begin{definition}
-  A system of \(m\) linear equations with \(n\) variables is often represented
-  by writing its coefficients and constants in an \term{augmented matrix}.
-  \begin{multicols}{2}\noindent
-  \begin{alignat*}{5}
-    a_{11}x_1 &\,+\,& a_{12}x_2 &\,+\,& \dots  &\,+\,& a_{1n}x_n &\,=\,& b_1 \\
-    a_{21}x_1 &\,+\,& a_{22}x_2 &\,+\,& \dots  &\,+\,& a_{2n}x_n &\,=\,& b_2 \\
-     \vdots&  &\vdots&   &&  &\vdots&&\vdots  \\
-    a_{m1}x_1 &\,+\,& a_{m2}x_2 &\,+\,& \dots  &\,+\,& a_{mn}x_n &\,=\,& b_m
-  \end{alignat*}
+\begin{activity}{10}
+  Consider the following matrix.
   \[
-    \begin{bmatrix}[cccc|c]
-      a_{11} & a_{12} & \cdots & a_{1n} & b_1\\
-      a_{21} & a_{22} & \cdots & a_{2n} & b_2\\
-      \vdots & \vdots & \ddots & \vdots & \vdots\\
-      a_{m1} & a_{m2} & \cdots & a_{mn} & b_m
+    A = \begin{bmatrix}[ccc|c]
+      1 & 2 & 3 & 1\\
+      2 & 4 & 8 & 0
     \end{bmatrix}
   \]
-  \end{multicols}
-\end{definition}
-
-\begin{definition}
-  Two systems of linear equations (and their corresponding augmented
-  matrices) are said to be \term{equivalent} if they have the same
-  solution set.
-
-  For example, both of these systems have a single solution:
-  \(\begin{bmatrix} x_1 \\ x_2 \end{bmatrix} = \begin{bmatrix} 1 \\ 1\end{bmatrix}\).
-
-  \begin{multicols}{2}\noindent
-    \begin{alignat*}{3}
-      3x_1 &\,-\,& 2x_2 &\,=\,& 1 \\
-      x_1 &\,+\,& 4x_2 &\,=\,& 5 \\
-    \end{alignat*}
-    \begin{alignat*}{3}
-      3x_1 &\,-\,& 2x_2 &\,=\,& 1 \\
-      4x_1 &\,+\,& 2x_2 &\,=\,& 6 \\
-    \end{alignat*}
-  \end{multicols}
-
-  Therefore these augmented matrices are equivalent:
-
-  \begin{multicols}{2}\noindent
-    \[
-      \begin{bmatrix}[cc|c]
-        3 & -2 & 1\\
-        1 &  4 & 5\\
-      \end{bmatrix}
-    \]
-    \[
-      \begin{bmatrix}[cc|c]
-        3 & -2 & 1\\
-        4 &  2 & 6\\
-      \end{bmatrix}
-    \]
-  \end{multicols}
-\end{definition}
-
-\begin{activity}{10}
-  Following are six procedures used to manipulate an augmented matrix.
-  Label the procedures that would result in an equivalent augmented
-  matrix as \textbf{valid}, and label the procedures that would
-  change the solution set of the corresponding linear system as
-  \textbf{invalid}.
-  \begin{multicols}{2}
-    \begin{enumerate}[a)]
-      \item Swap two rows.
-      \item Swap two columns.
-      \item Add a constant to every term in a row.
-      \item Multiply a row by a nonzero constant.
-      \item Add a constant multiple of one row to another row.
-      \item Replace a column with zeros.
-    \end{enumerate}
-  \end{multicols}
-  \begin{instructorNote}
-    This activity could be ran as a card sort.  Allow 5 additional minutes for intra team discussion.
-  \end{instructorNote}
-\end{activity}
-
-
-\begin{definition}
-  The following \term{row operations} produce equivalent
-  augmented matrices:
-  \begin{enumerate}
-    \item Swap two rows.
-    \item Multiply a row by a nonzero constant.
-    \item Add a constant multiple of one row to another row.
-  \end{enumerate}
-  Whenever two matrices \(A,B\) are equivalent (so whenever we do any of
-  these operations), we write \(A\sim B\).
-\end{definition}
-
-\begin{activity}{10}
-  Consider the following  linear systems.
-  \begin{multicols}{3}\noindent
-  \begin{enumerate}[(A)]
-    \item \(
-		\begin{alignedat}{4}
-   		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
-   		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
-   		  -x_1 &\,+\,& 3x_2 &\,-\,&  6x_3 &\,=\,& 11
-   		\end{alignedat}
-	\)
-
-	\item \(
-		\begin{alignedat}{4}
-	   		x_1 &     &      &\,+\,& 9x_3 &\,=\,& 16 \\
-	       		&     & x_2 &\,+\,& x_3 &\,=\,& 9 \\
-	       		&     &      &\,-\,& 12x_3 &\,=\,& -24
-		\end{alignedat}
-	\)
-
-   \item \(
-		\begin{alignedat}{4}
-    		x_1 &\,-\,& 3x_2 &\,+\,&  6x_3 &\,=\,& -11 \\
-		   2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
-		   3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6
-    	\end{alignedat}
-	\)
-
-
-   	\item \(
-		\begin{alignedat}{4}
-	   		x_1 &\,-\,& 3x_2 &\,+\,& 6x_3 &\,=\,& -11 \\
-	   		    &     & x_2 &\,+\,& x_3 &\,=\,& 9 \\
-	   		    &     & 7x_2 &\,-\,& 5x_3 &\,=\,& 39 \\
-		\end{alignedat}
-	\)
-
-   	\item \(
-		\begin{alignedat}{4}
-	   		x_1 &\,-\,& 3x_2 &\,+\,& 6x_3 &\,=\,& -11 \\
-	   		    &     & 4x_2 &\,-\,& 2x_3 &\,=\,& 24 \\
-	   		    &     & 7x_2 &\,-\,& 5x_3 &\,=\,& 39 \\
-		\end{alignedat}
-	\)
-
-
-
-	\item \(
-		\begin{alignedat}{4}
-	   		x_1 &     &      &\,+\,& 9x_3 &\,=\,& 16 \\
-	       		&     & x_2 &\,+\,& x_3 &\,=\,& 9 \\
-	       		&     &      &\,\,& x_3 &\,=\,& 2
-		\end{alignedat}
-	\)
-	\end{enumerate}
-    \end{multicols}
   \begin{subactivity}
-	Which system can be obtained from System (A) in the fewest number of row operations?
+    Find \(\RREF(A)\) (Use CoCalc).
   \end{subactivity}
   \begin{subactivity}
-    Rank the six linear systems from easiest to solve to hardest to solve.
+    How many solutions does the corresponding linear system have?
   \end{subactivity}
 \end{activity}
 
 \begin{activity}{10}
-Consider the following augmented matrices.
-\begin{multicols}{3}
-\begin{enumerate}[(A)]
-\item \( \begin{bmatrix}[ccc|c] 3 & -2 & 13 & 6 \\ 2 & -2 & 10 & 2 \\ -1 & 3 & -6 & 11 \end{bmatrix} \)
-\item \( \begin{bmatrix}[ccc|c] 1 & 0 & 9 & 16 \\ 0 & 1 & 1 & 9 \\ 0 & 0 & -12 & -24 \end{bmatrix} \)
-\item \( \begin{bmatrix}[ccc|c] 1 & -3 & 6 & -11 \\ 2 & -2 & 10 & 2 \\ 3 & -2 & 13 & 6 \end{bmatrix} \)
-\item \( \begin{bmatrix}[ccc|c] 1 & -3 & 6 & -11 \\ 0 & 1 & 1 & 9 \\ 0 & 7 & -5 & 39 \end{bmatrix} \)
-\item \( \begin{bmatrix}[ccc|c] 1 & -3 & 6 & -11 \\ 0 & 4 & -2 & 24 \\ 0 & 7 & -5 & 39 \end{bmatrix} \)
-\item \( \begin{bmatrix}[ccc|c] 1 & 0 & 9 & 16 \\ 0 & 1 & 1 & 9 \\ 0 & 0 & 1 & 2 \end{bmatrix} \)
+Consider the (simpler) system from the previous problem:
+	\begin{alignat*}{3}
+		x_1 &+ 2x_2 & &= 4\\
+	     	 & &x_3 &= -1
+	\end{alignat*}
+\begin{subactivity}
+Let $x_1=a$ and write the solution set in the form
+\( \left\{ \begin{bmatrix} a \\ ? \\ ? \end{bmatrix} \,\middle|\, a \in \IR \right\} \)
+\end{subactivity}
+\begin{subactivity}
+Let $x_2=b$ and write the solution set in the form
+\( \left\{ \begin{bmatrix} ? \\ b \\ ? \end{bmatrix} \,\middle|\, b \in \IR \right\} \)
+\end{subactivity}
+\begin{subactivity}
+Which of these was easier?  What features of the RREF matrix \[\begin{bmatrix}[ccc|c] 1 & 2 & 0 & 4 \\ 0 & 0 & 1 & -1 \end{bmatrix}\] cause this?
+\end{subactivity}
+\end{activity}
+
+\begin{definition}
+If a matrix is in reduced row echelon form, a \term{pivot} is an entry satisfying
+\begin{enumerate}[1.]
+\item It is $1$
+\item Everything else in the same row but to the left of it is zero
+\item Everything else in the same column is zero.
 \end{enumerate}
+
+For example, the pivots are circled in
+
+\[\begin{bmatrix}[ccc|c] \circledNumber{1} & 2 & 0 & 4 \\ 0 & 0 & \circledNumber{1} & -1 \end{bmatrix}\]
+\end{definition}
+
+
+\begin{activity}{5}
+Circle the pivots in each matrix below.
+\begin{multicols}{2}
+\[ \begin{bmatrix}[cccc|c] 1 & 1 & 0 & 0 & 2 \\ 0 & 0 & 1 & 0 &  0 \\ 0 & 0 & 0 &  1 & 1 \end{bmatrix} \]
+\[ \begin{bmatrix}[cccc|c] 1 & 1 & 0 & 1 & 0 \\ 0 & 0 & 1 & 1 & 0 \\ 0 & 0 & 0 & 0  & 0 \end{bmatrix} \]
+\[ \begin{bmatrix}[ccc|c] 1 & 0 & 1 & 2 \\ 0 & 1 & 0 & 1 \end{bmatrix} \]
+\[ \begin{bmatrix}[ccc|c] 1 & 0 & 0 & 2 \\ 0 & 1 & 1 & 0 \\ 0 & 0 & 0 & 0 \end{bmatrix} \]
 \end{multicols}
-\begin{subactivity}
-Rank the six matrices from farthest from a reduced row echelon form (RREF) matrix to closest to a RREF matrix.
-\end{subactivity}
-\begin{subactivity}
-These matrices are all \term{row equivalent} and represent equivalent linear systems.
-Write down one of these linear systems and solve it.
-\end{subactivity}
 \end{activity}
 
-\begin{remark}
-It is important to understand the \term{Gauss-Jordan elimination} algorithm that converts a matrix into reduced row echelon form, but in practice we don't do thsi by hand; we use technology to do this for us.
-\end{remark}
+\begin{definition}
+The pivots in a matrix correspond to \term{bound variables} in the system of equations.  The remaining variables are called \term{free variables}.
+
+To efficiently solve a system in RREF form, assign letters to free variables and solve for the bound variables.
+\end{definition}
 
 \begin{activity}{10}
+Find the solution set for the system
+\begin{alignat*}{6}
+2x_1&\,-\,&2x_2&\,-\,&6x_3&\,+\,&x_4&\,-\,&x_5&\,=\,&3 \\
+-x_1&\,+\,&x_2&\,+\,&3x_3&\,-\,&x_4&\,+\,&2x_5 &\,=\,& -3 \\
+x_1&\,-\,&2x_2&\,-\,&x_3&\,+\,&x_4&\,+\,&x_5 &\,=\,& 2
+\end{alignat*}
+by assigning letters to the free variables and solving for the bounded variables.
+\end{activity}
+
+\begin{observation}
+The solution set to the system
+\begin{alignat*}{6}
+2x_1&\,-\,&2x_2&\,-\,&6x_3&\,+\,&x_4&\,-\,&x_5&\,=\,&3 \\
+-x_1&\,+\,&x_2&\,+\,&3x_3&\,-\,&x_4&\,+\,&2x_5 &\,=\,& -3 \\
+x_1&\,-\,&2x_2&\,-\,&x_3&\,+\,&x_4&\,+\,&x_5 &\,=\,& 2
+\end{alignat*}
+is \[\left\{ \begin{bmatrix} 1+5a+2b \\ 1+2a+3b \\ a \\3+3b \\ b \end{bmatrix}\,\middle|\, a,b\in \IR\right\}.\]
+\end{observation}
+
+\begin{observation}
+Consider the truss pictured below with two fixed anchor points and a 10000 N load (assume all triangles are equilateral).
+\drawtruss
+
+The horizontal and vertical forces must balance at each of the five intersecting nodes.  For example, at the bottom left node
+\begin{multicols}{4}
+\begin{tikzpicture}
+\draw [thick, magenta,->] (0,0) -- node[left]{$F_1$} (1,1.71);
+\draw [thick, magenta,->] (0,0) -- node[below]{$F_2$} (2,0);
+\draw [thick, blue,->] (0,0) -- node[below right]{$N_1$} (1,1);
+\end{tikzpicture}
+
+\begin{tikzpicture}
+\draw [thick, magenta,->] (0,0) -- node[above left]{$F_{1,v}$} (0,1.71);
+\draw [thick, magenta,->] (0,0) -- node[below]{$F_{1,h}$} (1,0);
+\draw [thick, magenta,->] (0,0) -- node[below right]{$F_2$} (2,0);
+\draw [thick, blue,->] (0,0) -- node[left]{$N_{1,v}$} (0,1);
+\draw [thick, blue,->] (0,0) -- node[above right]{$N_{1,h}$} (1,0);
+\end{tikzpicture}
+
+Apply basic trig:
+\begin{align*}
+F_{1,v}&=F_1 \sin(60^\circ) \\ F_{1,h}&=F_1\cos(60^\circ)
+\end{align*}
+
+thus
+\begin{align*}
+F_1 \sin(60^\circ)+N_{1,v} &= 0 \\
+F_1 \cos(60^\circ)+N_{1,h}+F_2 &= 0
+\end{align*}
+\end{multicols}
+
+We adhere to the convention that a compression force on a strut is positive, while a negative force represents tension.
+\end{observation}
+
+\begin{activity}{10}
+Consider the truss pictured below with two fixed anchor points and a 10000 N load (assume all triangles are equilateral).
+\drawtruss
+
+From the bottom left node we obtained 2 equations in the four variables
 \begin{itemize}
-\item Go to {\tt http://www.cocalc.com} and create an account.
-\item Create a project titled ``Linear Algebra Team X'' with your appropriate team number.  Add all team members as collaborators.
-\item Open the project and click on ``New''
-\item Give it an appropriate name such as ``Class 4 workbook''.  Make a new Jupyter notebook.
-\item Click on ``Kernel'' and make sure ``Octave'' is selected.
-\item Type {\tt A=[1 3 4 ; 2 5 7]} to store the matrix $\begin{bmatrix} 1 & 3 & 4 \\ 2 & 5 & 7\end{bmatrix}$ in the variable $A$; hold shift when you press enter.
-\item Type {\tt rref(A)} to compute the reduced row echelon form of $A$.
+\item $F_{1}$ (compression force on strut one)
+\item $N_{1,v}$ and $N_{1,h}$ (horizontal and vertical components of the normal force from the left anchor)
+\item $F_2$ (compression force on strut 2).
 \end{itemize}
-\end{activity}
 
-\begin{remark}
-If you need to find the reduced row echelon form of a matrix during class, you should feel free to use CoCalc/Octave.
-\ \\
-
-You can change a cell from ``Code'' to ``Markdown'' or ``Raw'' to put comments around your calculations such as Activity numbers.
-\end{remark}
-
-\begin{activity}{8}
-Consider our system of equations from above.
- \[
-		\begin{alignedat}{4}
-   		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
-   		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
-   		  -x_1 &\,+\,& 3x_2 &\,-\,&  6x_3 &\,=\,& 11
-   		\end{alignedat}
-\]
-
-Convert this to an augmented matrix, use CoCalc to compute the reduced row echelon form, and convert back to a simpler system of equations to solve this system.  Write your solution on your whiteboard.
-\end{activity}
-
-\begin{activity}{7}
-Consider our system of equations from above.
- \[
-		\begin{alignedat}{4}
-   		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
-   		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
-   		  -x_1 &\,\,&  &\,-\,&  3x_3 &\,=\,&1
-   		\end{alignedat}
-\]
-
-Convert this to an augmented matrix, use CoCalc to compute the reduced row echelon form, and convert back to a simpler system of equations to solve this system.  Write your solution on your whiteboard.
+\begin{subactivity}
+Determine how many total equations there will be after accounting for all of the nodes, and and list all of the variables.  You do not need to actually determine all of the equations.
+\end{subactivity}
 \end{activity}
 
 
+\begin{activity}{10}
+\drawtruss[0.8]
+The resulting system is
+\begin{alignat*}{12}
+N_{1,v} &\,\,& &\,\,& &\,\,& &\,+\,& (\sin(60^\circ))F_1 &\,\,& &\,\,& &\,\,& &\,\,& &\,\,& &\,\,& &\,=\,& 0 \\
+        &\,\,& N_{1,h} &\,\,& &\,\,& &\,+\,& (\cos(60^\circ))F_1 &\,+\,&F_2 &\,\,& &\,\,& &\,\,& &\,\,& &\,\,& &\,=\,& 0 \\
+        &\,\,&         &\,\,& &\,\,& &\,-\,& (\sin(60^\circ))F_1 &\,\,& &\,-\,&(\sin(60^\circ)F_3 &\,\,& &\,\,& &\,\,& &\,\,& &\,=\,& 0 \\
+        &\,\,&         &\,\,& &\,\,& &\,-\,& (\cos(60^\circ))F_1 &\,\,& &\,+\,&(\cos(60^\circ)F_3 &\,+\,&F_4 &\,\,& &\,\,& &\,\,& &\,=\,& 0 \\
+        &\,\,&         &\,\,& &\,\,& &\,\,&                     &\,\,& &\,\,&(\sin(60^\circ)F_3 &\,\,& &\,+\,& (\sin(60^\circ))F_5&\,\,& &\,\,& &\,=\,& 10000 \\
+        &\,\,&         &\,\,& &\,\,& &\,\,&                     &\,-\,& F_2&\,-\,&(\cos(60^\circ)F_3 &\,\,& &\,+\,& (\cos(60^\circ))F_5&\,+\,&F_6 &\,\,& &\,=\,& 0 \\
+        &\,\,&         &\,\,& &\,\,& &\,\,&                     &\,\,& &\,\,&                   &\,\,& &\,-\,& (\sin(60^\circ))F_5&\,\,& &\,-\,& (\sin(60^\circ))F_7&\,=\,& 0 \\
+        &\,\,&         &\,\,& &\,\,& &\,\,&                     &\,\,& &\,\,&                   &\,-\,&F_4 &\,-\,& (\cos(60^\circ))F_5&\,\,& &\,+\,& (\cos(60^\circ))F_7&\,=\,& 0 \\
+        &\,\,&         &\,\,& N_{2,v} &\,\,& &\,\,&                     &\,\,& &\,\,&                   &\,\,& &\,\,&                    &\,\,& &\,+\,& (\sin(60^\circ))F_7&\,=\,& 0 \\
+        &\,\,&         &\,\,& &\,\,&N_{2,h} &\,\,&                     &\,\,& &\,\,&                   &\,\,&    &\,\,&                    &\,-\,& F_6 &\,-\,& (\cos(60^\circ))F_7&\,=\,& 0
+\end{alignat*}
+Solve this system to determine which struts are compressed and which are in tension.
+\end{activity}
+
+\begin{observation}
+The determined part of the solution is
+\begin{align*}
+N_{1,v}=N_{2,v}&=5000 \\
+F_1=F_4=F_7&=-5882.4 \\
+F_3=F_5=5882.4
+\end{align*}
+
+So struts 1,4,7 are in tension, while struts 3 and 5 are compressed.
+
+The forces on struts 2 and 6 (and the horizontal normal forces) are not strictly determined in this setting.
+\end{observation}
 
 \end{applicationActivities}
