Module E day 1 updates

--- a/tex/modules/1-E/sections/1.tex
+++ b/tex/modules/1-E/sections/1.tex
@@ -125,135 +125,116 @@
 \end{definition}
 
 \begin{activity}{10}
-  Consider the following  linear systems.
-  \begin{multicols}{3}\noindent
+  Consider the following (equivalent) linear systems.
+  \begin{multicols}{3}%\noindent
   \begin{enumerate}[(A)]
     \item \[
 		\begin{alignedat}{4}
-   		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
-   		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
-   		  -x_1 &\,+\,& 3x_2 &\,-\,&  6x_3 &\,=\,& 11 
+   		  -2x_1 &\,+\,& 4x_2 &\,-\,& 2x_3 &\,=\,& -8 \\
+   		  x_1 &\,-\,& 2x_2 &\,+\,& 2x_3 &\,=\,& 7 \\
+   		  3x_1 &\,-\, & 6x_2 &\,+\,&  4x_3 &\,=\,&  15
    		\end{alignedat}
 	\]
-%
-	\item \[
+
+    \item \[
 		\begin{alignedat}{4}
-	   		x_1 &     &      &\,+\,& 9x_3 &\,=\,& 16 \\
-	       	&  \,\,\,   & x_2 &\,+\,& x_3 &\,=\,& 9 \\
-	       		&     &      &\,-\,& 12x_3 &\,=\,& -24 
-		\end{alignedat}
-	\]
-%
-   \item \[
-		\begin{alignedat}{4}
-    		x_1 &\,-\,& 3x_2 &\,+\,&  6x_3 &\,=\,& -11 \\
-		   2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
-		   3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 
-    	\end{alignedat}
-	\]
-%
-   	\item \[
-		\begin{alignedat}{4}
-	   		x_1 &\,-\,& 3x_2 &\,+\,& 6x_3 &\,=\,& -11 \\
-	   		    &     & x_2 &\,+\,& x_3 &\,=\,& 9 \\
-	   		    &     & 7x_2 &\,-\,& 5x_3 &\,=\,& 39 
-		\end{alignedat}
+   		  x_1 &\,-\,& 2x_2 &\,+\,& 2x_3 &\,=\,& 7 \\
+   		  -2x_1 &\,+\,& 4x_2 &\,-\,& 2x_3 &\,=\,& -8 \\
+   		  3x_1 &\,-\, & 6x_2 &\,+\,&  4x_3 &\,=\,&  15
+   		\end{alignedat}
 	\]
 
-   	\item \[
+    \item \[
 		\begin{alignedat}{4}
-	   		x_1 &\,-\,& 3x_2 &\,+\,& 6x_3 &\,=\,& -11 \\
-	   		    &     & 4x_2 &\,-\,& 2x_3 &\,=\,& 24 \\
-	   		    &     & 7x_2 &\,-\,& 5x_3 &\,=\,& 39 
-		\end{alignedat}
+   		  x_1 &\,-\,& 2x_2 &\,+\,& 2x_3 &\,=\,& 7 \\
+   		   & &  & & 2x_3 &\,=\,& 6 \\
+   		   & & &\,-\,&2x_3 &\,=\,& -6 
+   		\end{alignedat}
 	\]
 
-	\item \[
+    \item \[
 		\begin{alignedat}{4}
-	   		x_1 &     &      &\,+\,& 9x_3 &\,=\,& 16 \\
-	       		& \,\,\, & x_2 &\,+\,& x_3 &\,=\,& 9 \\
-	       		&     &      &\,\,& x_3 &\,=\,& 2 
-		\end{alignedat}
+   		  x_1 &\,-\,& 2x_2 &\,+\,& 2x_3 &\,=\,& 7 \\
+   		   & &  & & x_3 &\,=\,& 3 \\
+   		   & & &\,-\,&2x_3 &\,=\,& -6 
+   		\end{alignedat}
+	\]
+
+    \item \[
+		\begin{alignedat}{4}
+   		  x_1 &\,-\,& 2x_2 &&  &\,=\,& 1 \\
+   		   & &  &\,\,\, & x_3 &\,=\,& 3 \\
+   		   & & &&0 &\,=\,& 0 
+   		\end{alignedat}
+	\]
+
+    \item \[
+		\begin{alignedat}{4}
+   		  x_1 &\,-\,& 2x_2 &\,+\,& 2x_3 &\,=\,& 7 \\
+   		   &\,&  && 2x_3 &\,=\,& 6 \\
+   		  3x_1 &\,-\, & 6x_2 &\,+\,&  4x_3 &\,=\,&  15
+   		\end{alignedat}
 	\]
 	\end{enumerate}
     \end{multicols}
   \begin{subactivity}
-	Which system can be obtained from System (A) in the fewest number of row operations?
+    Rank the six linear systems from easiest to solve to hardest to solve.
   \end{subactivity}
   \begin{subactivity}
-    Rank the six linear systems from easiest to solve to hardest to solve.
+	Determine the row operation used in each step transforming the hardest system into the easiest.
   \end{subactivity}
 \end{activity}
 
-\begin{activity}{10}
-Consider the following augmented matrices.
-\begin{multicols}{3}
-\begin{enumerate}[(A)]
-\item \( \begin{bmatrix}[ccc|c] 3 & -2 & 13 & 6 \\ 2 & -2 & 10 & 2 \\ -1 & 3 & -6 & 11 \end{bmatrix} \)
-\item \( \begin{bmatrix}[ccc|c] 1 & 0 & 9 & 16 \\ 0 & 1 & 1 & 9 \\ 0 & 0 & -12 & -24 \end{bmatrix} \)
-\item \( \begin{bmatrix}[ccc|c] 1 & -3 & 6 & -11 \\ 2 & -2 & 10 & 2 \\ 3 & -2 & 13 & 6 \end{bmatrix} \)
-\item \( \begin{bmatrix}[ccc|c] 1 & -3 & 6 & -11 \\ 0 & 1 & 1 & 9 \\ 0 & 7 & -5 & 39 \end{bmatrix} \)
-\item \( \begin{bmatrix}[ccc|c] 1 & -3 & 6 & -11 \\ 0 & 4 & -2 & 24 \\ 0 & 7 & -5 & 39 \end{bmatrix} \)
-\item \( \begin{bmatrix}[ccc|c] 1 & 0 & 9 & 16 \\ 0 & 1 & 1 & 9 \\ 0 & 0 & 1 & 2 \end{bmatrix} \)
+\begin{observation}
+We can rewrite the previous in terms of augmented matrices
+\[
+	\begin{alignedat}{3}
+		\begin{bmatrix}[ccc|c] -2 & 4 & -2 & -8 \\ 1 & -2 & 2 & 7 \\ 3 & -6 & 4 & 15 \end{bmatrix} & \sim &
+		\begin{bmatrix}[ccc|c] \circledNumber{1} & -2 & 2 & 7 \\ -2 & 4 & -2 & -8 \\ 3 & -6 & 4 & 15 \end{bmatrix} &\sim& 
+		\begin{bmatrix}[ccc|c] \circledNumber{1} & -2 & 2 & 7 \\ 0 & 0 & 2 & 6 \\ 3 & - 6 & 4 & 15 \end{bmatrix} \sim \\
+		\begin{bmatrix}[ccc|c] \circledNumber{1} & -2 & 2 & 7 \\ 0 & 0 & 2 & 6 \\ 0 & 0 & -2 & -6 \end{bmatrix}  &\sim&
+		\begin{bmatrix}[ccc|c] \circledNumber{1} & -2 & 2 & 7 \\ 0 & 0 & \circledNumber{1} & 3 \\ 0 & 0 & -2 & -6 \end{bmatrix}  &\sim&
+		\begin{bmatrix}[ccc|c] \circledNumber{1} & -2 & 0 & 1 \\ 0 & 0 & \circledNumber{1} & 3 \\ 0 & 0 & 0 & 0 \end{bmatrix} \phantom{\sim} 
+ 	\end{alignedat}
+\]
+
+We simplify our system by
+\begin{enumerate}
+\item Simplifying one column at a time, moving left to right;
+\item Once we have a \(1\) in a \term{pivot position}, we zero out above and below.
+\item We can always follow this procedure to put a matrix in \term{reduced row echelon form}, or \term{RREF}.
 \end{enumerate}
-\end{multicols}
-\begin{subactivity}
-Rank the six matrices from farthest from a reduced row echelon form (RREF) matrix to closest to a RREF matrix.
-\end{subactivity}
-\begin{subactivity}
-These matrices are all \term{row equivalent} and represent equivalent linear systems.
-Write down one of these linear systems and solve it.
-\end{subactivity}
-\end{activity}
+\end{observation}
 
 \begin{remark}
 It is important to understand the \term{Gauss-Jordan elimination} algorithm that converts a matrix into reduced row echelon form, but in practice we don't do this by hand; we use technology to do this for us.
 \end{remark}
 
 \begin{activity}{10}
-\begin{itemize}
-\item Go to {\tt http://www.cocalc.com} and create an account.
-\item Create a project titled ``Linear Algebra Team X'' with your appropriate team number.  Add all team members as collaborators.
-\item Open the project and click on ``New''
-\item Give it an appropriate name such as ``Class E2 workbook''.  Make a new Jupyter notebook.
-\item Click on ``Kernel'' and make sure ``Octave'' is selected.
-\item Type {\tt A=[1 3 4 ; 2 5 7]} to store the matrix $\begin{bmatrix} 1 & 3 & 4 \\ 2 & 5 & 7\end{bmatrix}$ in the variable $A$; hold shift when you press enter.
-\item Type {\tt rref(A)} to compute the reduced row echelon form of $A$.
-\end{itemize}
+A matrix is in \term{reduced row echelon form} (\term{RREF}) if
+\begin{enumerate}
+\item The leading term of each nonzero row is a 1 (these will be called \term{pivots})
+\item Each column containing a pivot is zero except for the pivot
+\item All rows of zeroes are at the bottom of the matrix.
+\end{enumerate}
+
+Determine which of the following matrices are in RREF:
+\begin{multicols}{3}
+\begin{enumerate}[(A)]
+\item \[ \begin{bmatrix}[ccc|c] 1 & 0 & 0 & 3 \\ 0 & 0 & 1 & -1 \\ 0 & 0 & 0 & 0 \end{bmatrix}\]
+\item \[ \begin{bmatrix}[ccc|c] 1 & 2 & 4 & 3 \\ 0 & 0 & 1 & -1 \\ 0 & 0 & 0 & 0 \end{bmatrix}\]
+\item \[ \begin{bmatrix}[ccc|c] 0 & 0 & 0 & 0 \\ 1 & 2 & 0 & 3 \\ 0 & 0 & 1 & -1  \end{bmatrix}\]
+\item \[ \begin{bmatrix}[ccc|c] 1 & 0 & 2 & -3 \\ 0 & 1 & 1 & -1 \\ 0 & 0 & 0 & 0 \end{bmatrix}\]
+\item \[ \begin{bmatrix}[ccc|c] 1 & 0 & 0 & 4 \\ 0 & 1 & 0 & 7 \\ 0 & 0 & 0 & 0 \end{bmatrix}\]
+\item \[ \begin{bmatrix}[ccc|c] 1 & 0 & 0 & 4 \\ 0 & 1 & 0 & 7 \\ 0 & 0 & 1 & 0 \end{bmatrix}\]
+\end{enumerate}
+\end{multicols}
 \end{activity}
 
 \begin{remark}
-If you need to find the reduced row echelon form of a matrix during class, you should feel free to use CoCalc/Octave.
-\ \\
-\ \\
-You can change a cell from ``Code'' to ``Markdown'' or ``Raw'' to put comments around your calculations such as Activity numbers.
+Before the next class, work at least five practice problems putting matrices into reduced row echelon form.  You can view a video example at TODO
 \end{remark}
 
-\begin{activity}{8}
-Consider our system of equations from above.
- \[
-		\begin{alignedat}{4}
-   		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
-   		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
-   		  -x_1 &\,+\,& 3x_2 &\,-\,&  6x_3 &\,=\,& 11
-   		\end{alignedat}
-\]
-
-Convert this to an augmented matrix, use CoCalc to compute the reduced row echelon form, and convert back to a simpler system of equations to solve this system.  Write your solution on your whiteboard.
-\end{activity}
-
-\begin{activity}{7}
-Consider our system of equations from above.
- \[
-		\begin{alignedat}{4}
-   		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
-   		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
-   		  -x_1 &\,\,&  &\,-\,&  3x_3 &\,=\,&1
-   		\end{alignedat}
-\]
-
-Convert this to an augmented matrix, use CoCalc to compute the reduced row echelon form, and convert back to a simpler system of equations to solve this system.  Write your solution on your whiteboard.
-\end{activity}
 
 
 
