--- a/tex/modules/1-E/sections/2.tex
+++ b/tex/modules/1-E/sections/2.tex
@@ -17,10 +17,51 @@
 
 \begin{applicationActivities}
 
-\begin{fact}
-  Every augmented matrix \(A\) reduces to a unique reduced row echelon form
-  matrix. This matrix is denoted as \(\RREF(A)\).
-\end{fact}
+
+\begin{activity}{10}
+\begin{itemize}
+\item Go to {\tt http://www.cocalc.com} and create an account.
+\item Create a project titled ``Linear Algebra Team X'' with your appropriate team number.  Add all team members as collaborators.
+\item Open the project and click on ``New''
+\item Give it an appropriate name such as ``Class E2 workbook''.  Make a new Jupyter notebook.
+\item Click on ``Kernel'' and make sure ``Octave'' is selected.
+\item Type {\tt A=[1 3 4 ; 2 5 7]} to store the matrix $\begin{bmatrix} 1 & 3 & 4 \\ 2 & 5 & 7\end{bmatrix}$ in the variable $A$; hold shift when you press enter.
+\item Type {\tt rref(A)} to compute the reduced row echelon form of $A$.
+\end{itemize}
+\end{activity}
+
+\begin{remark}
+If you need to find the reduced row echelon form of a matrix during class, you should feel free to use CoCalc/Octave.
+\ \\
+\ \\
+You can change a cell from ``Code'' to ``Markdown'' or ``Raw'' to put comments around your calculations such as Activity numbers.
+\end{remark}
+
+\begin{activity}{8}
+Consider our system of equations from above.
+ \[
+		\begin{alignedat}{4}
+   		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
+   		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
+   		  -x_1 &\,+\,& 3x_2 &\,-\,&  6x_3 &\,=\,& 11
+   		\end{alignedat}
+\]
+
+Convert this to an augmented matrix, use CoCalc to compute the reduced row echelon form, and convert back to a simpler system of equations to solve this system.  Write your solution on your whiteboard.
+\end{activity}
+
+\begin{activity}{7}
+Consider our system of equations from above.
+ \[
+		\begin{alignedat}{4}
+   		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
+   		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
+   		  -x_1 &\,\,&  &\,-\,&  3x_3 &\,=\,&1
+   		\end{alignedat}
+\]
+
+Convert this to an augmented matrix, use CoCalc to compute the reduced row echelon form, and convert back to a simpler system of equations to solve this system.  Write your solution on your whiteboard.
+\end{activity}
 
 \begin{activity}{10}
   Consider the following matrix.
