Finish module E tweaks

--- a/tex/modules/2-V/index.tex
+++ b/tex/modules/2-V/index.tex
@@ -4,6 +4,7 @@
 \input{modules/2-V/readiness/outcomes.tex}
 \input{modules/2-V/readiness/resources.tex}
 
+\input{modules/2-V/sections/0.tex}
 \input{modules/2-V/sections/1.tex}
 \input{modules/2-V/sections/2.tex}
 \input{modules/2-V/sections/3.tex}
