--- a/tex/modules/3-S/index.tex
+++ b/tex/modules/3-S/index.tex
@@ -4,6 +4,7 @@
 \input{modules/3-S/readiness/outcomes.tex}
 \input{modules/3-S/readiness/resources.tex}
 
+\stepcounter{SectionCounter}
 \input{modules/3-S/sections/1.tex}
 \input{modules/3-S/sections/2.tex}
 \input{modules/3-S/sections/3.tex}
