--- a/tex/modules/4-A/index.tex
+++ b/tex/modules/4-A/index.tex
@@ -3,6 +3,7 @@
 \input{modules/4-A/standards.tex}
 \input{modules/4-A/readiness/outcomes.tex}
 
+\stepcounter{SectionCounter}
 \input{modules/4-A/sections/1.tex}
 \input{modules/4-A/sections/2.tex}
 \input{modules/4-A/sections/3.tex}
