--- a/tex/modules/6-G/index.tex
+++ b/tex/modules/6-G/index.tex
@@ -4,6 +4,7 @@
 \input{modules/6-G/readiness/outcomes.tex}
 \input{modules/6-G/readiness/resources.tex}
 
+\stepcounter{SectionCounter}
 \input{modules/6-G/sections/1.tex}
 \input{modules/6-G/sections/2.tex}
 \input{modules/6-G/sections/3.tex}
