--- a/tex/modules/5-M/index.tex
+++ b/tex/modules/5-M/index.tex
@@ -4,6 +4,7 @@
 \input{modules/5-M/readiness/outcomes.tex}
 \input{modules/5-M/readiness/resources.tex}
 
+\stepcounter{SectionCounter}
 \input{modules/5-M/sections/1.tex}
 \input{modules/5-M/sections/2.tex}
 \input{modules/5-M/sections/3.tex}
